# simple_macros

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
src/: base_layout.py  main.py  settings.py  state_manager.py  test.py
src/components/: search_bar.py
src/data/db_orm/: __init__.py  alembic.ini  connection.py  populate_db.py  query_obj.py  recreate_tables.py  run_migration.py
src/data/db_orm/alembic/: env.py
src/data/db_orm/alembic/versions/: 05dc28ce10d0_.py  673860462603_.py
src/data/db_orm/tables/: __init__.py  base.py  tbl_ingredients.py  tbl_recipe_ingredients.py  tbl_recipes.py
src/data/errors/: redis_error.py  repository_error.py  sql_error.py
src/data/repository/: ingredients.py
src/pages/: add_edit_ingredient.py  add_edit_recipe.py  home.py  ingredients.py  input_text.py  recipes.py
src/utils/: table_builder.py
