[project]
name = "simple-macros"
version = "0.1.0"
description = ""
authors = [
    {name = "toriium",email = "John.Doe@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
